@@ -164,11 +164,13 @@ include_once('include/page_header.php');
 	$item['hostname'] = $host['name'];
 
 // resets get params for proper page refresh
-	if(isset($_REQUEST['period']) || isset($_REQUEST['stime'])){
+	if((isset($_REQUEST['period']) || isset($_REQUEST['stime']))){
 		navigation_bar_calc('web.item.graph', $item['itemid'], true);
-		jsRedirect('history.php?action=' . get_request('action', 'showgraph') . '&itemid=' . $item['itemid']);
-		include_once('include/page_footer.php');
-		exit();
+		if ($_REQUEST['action'] != 'showvalues') {
+			jsRedirect('history.php?action=' . get_request('action', 'showgraph') . '&itemid=' . $item['itemid']);
+			include_once('include/page_footer.php');
+			exit();
+		}
 	}
 //--
 
@@ -547,7 +549,6 @@ include_once('include/page_header.php');
 	}
 ?>
 <script type="text/javascript">
-//<!--<![CDATA[
 function addPopupValues(list){
 	if(!isset('object', list)){
 		throw("Error hash attribute 'list' doesn't contain 'object' index");
